# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./trips";
 export * from "./messages";
 export * from "./members";
 export * from "./conversation-states";
+export * from "./responders";
